scrollbar fix

--- a/styles/clientView.css
+++ b/styles/clientView.css
@@ -10,7 +10,8 @@
 
 html,
 body {
-  overflow: scroll;
+ /* overflow: scroll; */
+ overflow: auto;
   width: 100%;
   height: 100%;
   padding: 0%;
@@ -443,7 +444,8 @@ th{
     display: flex;
     flex-direction: row;
     margin:10px 0px 20px 0px;
-    overflow: scroll;
+    /* overflow: scroll; */
+    overflow: auto;
 }
 
 .deviceColumn{
@@ -576,7 +578,8 @@ table{
 .deviceAvailableRow{
     display: flex;
     margin:10px 0px 20px 0px;
-    overflow: scroll;
+    /* overflow: scroll; */
+  overflow: auto;
     height: fit-content;
 }
 
