--- a/styles/waitingScreen.css
+++ b/styles/waitingScreen.css
@@ -1,6 +1,7 @@
 html,
 body {
-    overflow: scroll;
+    /* overflow: scroll; */
+  overflow: auto;
     width: 100%;
     height: 100%;
     padding: 0%;
